Logica de asignación de bono y reportes.